--- a/package.json
+++ b/package.json
@@ -2,30 +2,35 @@
 	"name": "tamarack",
 	"version": "0.2.0+1.0.0",
 	"description": "Micro framework for working with the chain of responsibility pattern. Port of the Tamarack .NET library.",
-	"keywords": [ "chain", "responsibility", "pipeline", "filter" ],
+	"keywords": [
+		"chain",
+		"responsibility",
+		"pipeline",
+		"filter"
+	],
 	"directories": {
 		"lib": "src"
 	},
-
 	"files": [
 		"index.js"
 	],
-
 	"author": "Tommy Montgomery <tmont@tmont.com> (http://tmont.com/)",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/tmont/tamarackjs.git"
 	},
-
 	"devDependencies": {
-		"mocha": "1.12.0",
-		"should": "1.2.2",
-		"browserify": "2.26.0",
-		"uglify-js": "2.3.6"
+		"chalk": "0.5.1",
+		"grunt": "0.4.5",
+		"grunt-browserify": "2.1.4",
+		"grunt-cli": "0.1.13",
+		"grunt-contrib-clean": "0.6.0",
+		"grunt-contrib-copy": "0.5.0",
+		"grunt-contrib-uglify": "0.5.1",
+		"grunt-mocha-test": "0.11.0",
+		"should": "1.2.2"
 	},
-
 	"scripts": {
-		"test": "./node_modules/.bin/mocha -R spec tests",
-		"build": "./node_modules/.bin/browserify -s tamarack -e index.js > tamarack.js && ./node_modules/.bin/uglifyjs tamarack.js > tamarack.min.js && rm tamarack.js"
+		"test": "./node_modules/.bin/grunt test"
 	}
 }
