--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"url": "https://github.com/tmont/tamarackjs.git"
 	},
 	"devDependencies": {
+		"blanket": "1.1.6",
 		"chalk": "0.5.1",
 		"grunt": "0.4.5",
 		"grunt-browserify": "2.1.4",
@@ -27,10 +28,15 @@
 		"grunt-contrib-clean": "0.6.0",
 		"grunt-contrib-copy": "0.5.0",
 		"grunt-contrib-uglify": "0.5.1",
-		"grunt-mocha-test": "0.11.0",
+		"grunt-mocha-cov": "0.3.0",
 		"should": "1.2.2"
 	},
 	"scripts": {
 		"test": "./node_modules/.bin/grunt test"
+	},
+	"config": {
+		"blanket": {
+			"pattern": "tamarackjs/index.js"
+		}
 	}
 }
