--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"grunt-contrib-copy": "0.5.0",
 		"grunt-contrib-uglify": "0.5.1",
 		"grunt-mocha-cov": "0.3.0",
+		"grunt-mocha": "0.4.11",
 		"should": "4.0.4"
 	},
 	"scripts": {
